fix: spacing horizontal

--- a/src/components/LandingPageSection.less
+++ b/src/components/LandingPageSection.less
@@ -69,7 +69,8 @@
     .landing-page-section__text {
         transform: unset;
         flex-grow: 0;
-        height: unset;
+        align-items: center;
+        height: 100%;
 
         span {
             writing-mode: unset;
