--- a/src/components/MenuBar.less
+++ b/src/components/MenuBar.less
@@ -61,7 +61,7 @@
         margin: 0.75em auto 0 auto;
         width: 80%;
         flex-direction: column;
-        justify-content: start;
+        justify-content:end;
 
         .line {
             width: 100%;
